--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,14 +7,19 @@ on: [push, pull_request]
 jobs:
   test:
     runs-on: ubuntu-latest
+    if: >-
+      github.event_name == 'pull_request' ||
+      (github.event_name == 'push' && contains(lower(github.ref), '[test]'))
     strategy:
       matrix:
         python-version: [3.7, 3.8, 3.9, 3.11, 3.12]
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+      - name: Install dependencies
+        run: pip install -e .
       - name: Run tests
-        run: python -m unittest discover
+        run: python -m unittest discover -s Effortless/tests
