--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,7 +7,7 @@ on: [push]
 jobs:
   publish:
     runs-on: ubuntu-latest
-    if: "contains(lower(github.ref), '[release]')"
+    if: "contains(github.ref, '[release]') || contains(github.ref, '[RELEASE]')"
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python
