--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,5 +1,3 @@
-# .github/workflows/test.yml
-
 name: Run Tests
 
 on: [push, pull_request]
@@ -9,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     if: >-
       github.event_name == 'pull_request' ||
-      (github.event_name == 'push' && contains(lower(github.ref), '[test]'))
+      (github.event_name == 'push' && (contains(github.ref, '[test]') || contains(github.ref, '[TEST]')))
     strategy:
       matrix:
         python-version: [3.7, 3.8, 3.9, 3.11, 3.12]
