--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,7 +7,9 @@ on: [push]
 jobs:
   publish:
     runs-on: ubuntu-latest
-    if: "contains(github.ref, '[release]') || contains(github.ref, '[RELEASE]')"
+    if: >-
+      contains(github.event.head_commit.message, '[release]') &&
+      contains(fromJson(${{ vars.ALLOWED_PUBLISHERS }}), github.actor)
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python
