--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
         {
             "label": "Begin an interactive Effortless session",
             "type": "shell",
-            "command": "python3 -i -c 'from effortless import db, Effortless'",
+            "command": "python3 -i -c 'from effortless import *'",
             "group": {
                 "kind": "build",
                 "isDefault": true
