--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "python.testing.unittestEnabled": true,
     "python.testing.unittestArgs": ["-v", "-s", "./tests", "-p", "test_*.py"],
-    "python.testing.autoTestDiscoverOnSaveEnabled": true
+    "python.testing.autoTestDiscoverOnSaveEnabled": true,
+    "liveServer.settings.root": "/docs"
 }
