--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,10 +1,10 @@
 # Simple workflow for deploying static content to GitHub Pages
-name: Deploy static content to Pages
+name: Update Docs
 
 on:
-  # Runs on pushes targeting the default branch
+  # Runs on pushes targeting the default branch with [docs] in the commit message
   push:
-    branches: ["main"]
+    branches: ["main"]    
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -28,6 +28,7 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
+    if: contains(github.event.head_commit.message, '[docs]')
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -36,7 +37,6 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # Upload docs
           path: 'docs/'
       - name: Deploy to GitHub Pages
         id: deployment
